# SurKit

./: .readthedocs.yaml  README.md  pyproject.toml
doc/: log  requirements.txt
doc/source/: conf.py  index.rst
doc/source/example/: solve_function.rst  uncertainty_quantification.rst
doc/source/modules/: modules.rst  surkit.backend.rst  surkit.conditions.rst  surkit.data.rst  surkit.gradient.rst  surkit.losses.rst  surkit.nn.jax.rst  surkit.nn.oneflow.rst  surkit.nn.pytorch.rst  surkit.nn.rst  surkit.optimizer.rst  surkit.pde.rst  surkit.rst  surkit.train.rst  surkit.utils.rst
example/: bayesian.py  burgers_pinn.py  cfd_afno.py  cfd_fno.py  cfd_unet.py  darcy_afno.py  darcy_fno.py  darcy_nn_ensemble.py  darcy_unet.py  darcy_with_data.py  dataset_Nuclie.py  image_afno.py  image_unet.py  nn_ensemble.py  poisson_pinn.py  swe2d.py  swe2d_afno.py  swe2d_bayesian.py  swe2d_fno.py  swe2d_nn_ensemble.py  swe2d_unet.py  swe2d_with_data.py
surkit/: __info__.py  __init__.py  pipeline.py
surkit/backend/: __init__.py  backend.py  jax_bkd.py  oneflow_bkd.py  pytorch_bkd.py
surkit/conditions/: hard_condition.py  icbc.py  icbc2d.py
surkit/data/: dataset.py  processing.py  sampling.py
surkit/gradient/: sobelfilter.py
surkit/losses/: __init__.py  losses_jax.py  losses_oneflow.py  losses_pytorch.py
surkit/nn/: __init__.py
surkit/optimizer/: __init__.py  optimizer_jax.py  optimizer_oneflow.py  optimizer_pytorch.py
surkit/pde/: __init__.py  pde.py
surkit/train/: __init__.py  train_jax.py  train_oneflow.py  train_pytorch.py
surkit/utils/: math_utils.py  parse.py
(+56 files in other folders)
